// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Builder > should allow to add addons > Components 1`] = `
[
  ComponentsGroup {
    "components": [
      Component {
        "construct": undefined,
        "copyable": true,
        "deserialize": undefined,
        "disallow": [],
        "draggable": true,
        "droppable": true,
        "duplicable": true,
        "duplicate": undefined,
        "editable": true,
        "getContainers": undefined,
        "group": undefined,
        "hasCustomInnerContent": false,
        "icon": undefined,
        "id": "richtext",
        "name": "",
        "options": [],
        "render": undefined,
        "sanitize": undefined,
        "serialize": undefined,
        "settings": ComponentSettingsForm {
          "defaults": {},
          "fields": [],
          "floatingSettings": undefined,
          "title": undefined,
        },
        "type": "component",
        "usable": true,
      },
    ],
    "id": "other",
    "name": [Function],
    "type": "group",
    "usable": true,
  },
]
`;

exports[`Builder > should allow to add addons > Fields 1`] = `
[
  Field {
    "props": {},
    "render": undefined,
    "type": "richtext-field",
  },
]
`;

exports[`Builder > should create a builder > Base content 1`] = `
[
  {
    "content": "This is a title",
    "headingLevel": "h1",
    "id": 0,
    "type": "title",
  },
  {
    "content": "This is a text",
    "id": 1,
    "type": "text",
  },
]
`;

exports[`Builder > should create a builder > With button & title swapped 1`] = `
[
  {
    "content": "This is a new button",
    "id": 2,
    "type": "button",
  },
  {
    "content": "This is a title",
    "headingLevel": "h1",
    "id": 0,
    "type": "title",
  },
]
`;

exports[`Builder > should create a builder > With button 1`] = `
[
  {
    "content": "This is a title",
    "headingLevel": "h1",
    "id": 0,
    "type": "title",
  },
  {
    "content": "This is a button",
    "id": 2,
    "type": "button",
  },
]
`;

exports[`Builder > should create a builder > With button duplicated 1`] = `
[
  {
    "content": "This is a new button",
    "id": 2,
    "type": "button",
  },
  {
    "content": "This is a new button",
    "id": 3,
    "type": "button",
  },
  {
    "content": "This is a title",
    "headingLevel": "h1",
    "id": 0,
    "type": "title",
  },
]
`;

exports[`Builder > should create a builder > With button updated 1`] = `
[
  {
    "content": "This is a title",
    "headingLevel": "h1",
    "id": 0,
    "type": "title",
  },
  {
    "content": "This is a new button",
    "id": 2,
    "type": "button",
  },
]
`;

exports[`Builder > should create a builder > Without text 1`] = `
[
  {
    "content": "This is a title",
    "headingLevel": "h1",
    "id": 0,
    "type": "title",
  },
]
`;
